--- a/project/app/templates/app/home.html
+++ b/project/app/templates/app/home.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>{{ current_time }}</h3>
-    <h3>Сайт с публикациями</h1>
-  </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<h1>{{ current_time }}</h3>
+<h3>Сайт с публикациями</h1>
+    {% for links in link %}
+        <a href="{{ link }}">Читать</a>
+    {% endfor %}
+{% endblock content %}
