--- a/project/app/templates/app/post_list.html
+++ b/project/app/templates/app/post_list.html
@@ -1,13 +1,18 @@
 {% extends "base.html" %}
+{% block title %}Все публикации{% endblock title %}
 {% block content %}
-  {% for post in post_list %}
-    <h1>Название: {{ post.title }}</h1>
-    <p>{{ post.content }}</p>
-    <p>Написал: {{ post.author }}</p>
-    <p>Категория: {{ post.category }}</p>
-    <p>Создан: {{ post.created_at }}</p>
-    <p>Обновлён: {{ post.updated_at }}</p>
+  <div class="posts">
+    {% for post in post_list %}
+      <div class="post">
+        <h1>Название: {{ post.title }}</h1>
+        <p>{{ post.content }}</p>
+        <p>Написал: {{ post.author }}</p>
+        <p>Категория: {{ post.category }}</p>
+        <p>Создан: {{ post.created_at }}</p>
+        <p>Обновлён: {{ post.updated_at }}</p>
+      </div>
     {% empty %}
     <h3>Публикации отсутсвуют.</h3>
-  {% endfor %}
+    {% endfor %}
+  </div>
 {% endblock content %}
