--- a/project/app/templates/app/post_list.html
+++ b/project/app/templates/app/post_list.html
@@ -12,7 +12,7 @@
         <p>Обновлён: {{ post.updated_at }}</p>
       </div>
     {% empty %}
-    <h3>Публикации отсутсвуют.</h3>
+    <h3>Публикации отсутствуют.</h3>
     {% endfor %}
   </div>
 {% endblock content %}
